--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header translucent>
   <ion-toolbar>
-    <ion-title>Searchbar</ion-title>
+    <ion-title>PRIMEIROS SOCORROS</ion-title>
   </ion-toolbar>
   <ion-toolbar>
     <ion-searchbar></ion-searchbar>
@@ -11,27 +11,28 @@
   <ion-grid>
     <ion-row>
 
-      <ion-col>
+      <ion-col size='6'>
         <ion-card>
-          <img src="assets/madison.jpg" />
+          <img src="assets/parada_cardiorrespiratoria.jpg" />
           <ion-card-header>
-            <ion-card-title>Topico</ion-card-title>
+            <ion-card-title>Parada Cardiorrespiratória</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            Descrição
+            Inconsciência, ausência de movimentos respiratórios e batimentos cardíacos.
           </ion-card-content>
         </ion-card>
       </ion-col>
 
-      <ion-col>
-        <ion-card>
-          <img src="assets/madison.jpg" />
+      <ion-col size='6'>
+        <ion-card style="height: 324.188px">
+          <img style="width: 145px" src="assets/desobstrucao_vias_aereas.jpg" />
           <ion-card-header>
 
-            <ion-card-title>Madison, WI</ion-card-title>
+            <ion-card-title>Desobstrução das Vias Aéreas</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            Descrição
+            Dificuldade Respiratória, ansiedade, Ronco – Queda de língua, gorgolejo – Sangue, saliva e vômito, pequenos objetos, Prótese e dentes, cianose
+
           </ion-card-content>
         </ion-card>
       </ion-col>
