--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,9 @@
+ion-toolbar {
+  font-family: "Arial Black", Gadget, sans-serif;
+  --background: #fe3d3d;
+  --color: var(--ion-color-primary-contrast, #fff);
+}
 
+ion-card-title {
+    font-size: 
+}
