--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -3,3 +3,13 @@ ion-toolbar {
   --background: #fe3d3d;
   --color: var(--ion-color-primary-contrast, #fff);
 }
+
+ion-card-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+ion-card-title {
+  font-family: "Arial Black", Gadget, sans-serif;
+  --color: darkgray;
+}
