--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,18 +1,21 @@
 <ion-header translucent>
   <ion-toolbar>
+    <ion-avatar style="width: 50px; height: 50px;" slot="start">
+      <img src="assets/hospital.png">
+    </ion-avatar>
     <ion-title>PRIMEIROS SOCORROS</ion-title>
   </ion-toolbar>
   <ion-toolbar>
-    <ion-searchbar (ionchange)="handleInput()"></ion-searchbar>
+    <ion-searchbar (click)="openBusca()"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid>
     <ion-list>
-      <ion-row>
-        <ion-col size='6' *ngFor="let topico of topicosApp">
-          <ion-card style="height: 300px;">
+      <ion-row *ngFor="let topico of topicosApp">
+        <!-- <ion-col size='6' *ngFor="let topico of topicosApp"> -->
+        <!-- <ion-card style="height: 300px;">
             <img src="assets/default.jpg" />
             <ion-card-header>
               <ion-card-title style="font-size: 15px">{{topico.title}}</ion-card-title>
@@ -20,8 +23,16 @@
             <ion-card-content>
               {{topico.definicao}}
             </ion-card-content>
-          </ion-card>
-        </ion-col>
+          </ion-card> -->
+        <ion-item>
+          <ion-avatar slot="start">
+            <img src="{{topico.icon}}">
+          </ion-avatar>
+          <ion-label>
+            <h2 style="font-size: 15px;font-family: 'Arial', Gadget, sans-serif;">{{topico.title}}</h2>
+          </ion-label>
+        </ion-item>
+        <!-- </ion-col> -->
       </ion-row>
     </ion-list>
   </ion-grid>
