--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -11,6 +11,16 @@ ion-card-content {
 }
 
 ion-card-title {
-  font-family: "Arial Black", Gadget, sans-serif;
+  font-family: "Comic Sans MS", cursive, sans-serif;
   --color: darkgray;
+}
+
+ion-avatar {
+  --border-radius: 1px;
+}
+
+ion-item {
+  --background: #fdfbd8;
+  --border-color: #ffffff;
+  --color: rgb(207, 93, 93);
 }
