--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -10,10 +10,11 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content>  
   <ion-list>
     <ion-item *ngFor="let item of items">
       {{ item }}
+      <p data-toggle="collapse">Testando</p>
     </ion-item>
   </ion-list>
 </ion-content>
