--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -20,7 +20,7 @@ ion-avatar {
 }
 
 ion-item {
-  --background: #fdfbd8;
-  --border-color: #ffffff;
+  --background: #f7f5d3;
+  
   --color: rgb(207, 93, 93);
 }
