--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,26 +1,17 @@
 ion-toolbar {
   font-family: "Arial Black", Gadget, sans-serif;
   --color: #fe3d3d;
-  --background: var(--ion-color-primary-contrast, #fff);
+  --background: rgb(75, 75, 204);
 }
 
 
 ion-card-content {
   overflow: hidden;
-  text-overflow: ellipsis;
+  white-space: normal;
 }
 
 ion-card-title {
+  text-overflow: ellipsis;
   font-family: "Comic Sans MS", cursive, sans-serif;
   --color: darkgray;
-}
-
-ion-avatar {
-  --border-radius: 1px;
-}
-
-ion-item {
-  --background: #f7f5d3;
-  
-  --color: rgb(207, 93, 93);
 }
