--- a/src/app/blank/blank.page.html
+++ b/src/app/blank/blank.page.html
@@ -5,5 +5,9 @@
 </ion-header>
 
 <ion-content>
-
+  <video id="player_webtv_html5_api" class="vjs-tech" autoplay="" poster="" preload="auto"
+    data-setup="{ 'fluid':true,'aspectRatio':'16:9' }" tabindex="-1"
+    src="blob:http://playerv.justweb.pt/49c79782-361c-42dd-991d-81a3cce1f705">
+    <source src="http://stmv1.justweb.pt/novumcanal/novumcanal/playlist.m3u8" type="application/x-mpegURL">
+  </video>
 </ion-content>
