--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,18 +1,14 @@
 <ion-header translucent>
   <ion-toolbar>
-    <ion-avatar style="width: 50px; height: 50px;" slot="start">
-      <img src="assets/hospital.png">
-    </ion-avatar>
-    <ion-title>PRIMEIROS SOCORROS</ion-title>
-  </ion-toolbar>
-  <ion-toolbar>
-    <ion-searchbar id="busca" (ionChange)="getItems($event)"></ion-searchbar>
+    <ion-title style="text-align: center;font-size: 15px;padding-left: 1px;">
+      <strong>FIQUE CALMO! PEÇA AJUDA - 192</strong>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>  
   <ion-list>
-    <ion-item *ngFor="let item of items">
+    <ion-item *ngFor="let item of items" (click)="openTopico(item)">
       {{ item }}
     </ion-item>
   </ion-list>
