--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header translucent>
   <ion-toolbar>
 
-    <ion-title style="text-align: center;font-size: 15px;padding-left: 1px;">
+    <ion-title style="text-align: center;font-size: 15px;padding-right: 0px;font-family: 'Comic Sans MS', cursive, sans-serif;">
       <strong>FIQUE CALMO! PEÇA AJUDA - 192</strong>
     </ion-title>
     <ion-icon (click)="openBusca()" name="search" slot="end" style="width: 40px;height: 30px;margin-right: 15px">
