--- a/src/app/search/search.page.scss
+++ b/src/app/search/search.page.scss
@@ -1,7 +1,6 @@
 ion-toolbar {
-    font-family: "Arial Black", Gadget, sans-serif;
-    --color: #fe3d3d;
-    --background: var(--ion-color-primary-contrast, #fff);
-  }
-
-  
+  font-family: "Arial Black", Gadget, sans-serif;
+  --color: #FFFF;
+  --background: rgb(248, 63, 63);
+  height: 90px;
+}
