--- a/src/app/blank/blank.page.html
+++ b/src/app/blank/blank.page.html
@@ -7,7 +7,7 @@
       style="font-family: 'Comic Sans MS', cursive, sans-serif;text-align: center;font-size: 17px;">
       <div><strong>{{topicoEscolhido.titulo}}</strong></div>
     </h1>
-    <ion-icon (click)="openBusca()" name="search" slot="end" style="color: darkslategray;width: 40px;height: 30px;margin-right: 15px">
+    <ion-icon (click)="openBusca()" name="search" slot="end" style="width: 40px;height: 30px;margin-right: 15px">
     </ion-icon>
   </ion-toolbar>
 </ion-header>
