--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-icon style="width: 40px;height: 30px;margin-left: 10px" slot="start" name="medkit"></ion-icon>
     <ion-title
       style="text-align: center;font-size: 15px;padding-right: 0px;font-family: 'Comic Sans MS', cursive, sans-serif;">
-      <strong>FIQUE CALMO! PEÇA AJUDA - 192</strong>
+      <strong>FIQUE CALMO!<br>PEÇA AJUDA - 192</strong>
     </ion-title>
     <ion-icon (click)="openBusca()" name="search" slot="end" style="width: 40px;height: 30px;margin-right: 10px">
     </ion-icon>
